--- a/demos_copy/pause_song/Makefile
+++ b/demos_copy/pause_song/Makefile
@@ -8,15 +8,22 @@ LDFLAGS		= -L/opt/ti/msp430_gcc/include
 CC              = msp430-elf-gcc
 AS              = msp430-elf-as
 
-all: button.elf 
+all: siren.elf 
 
 #additional rules for files
-button.elf: ${COMMON_OBJECTS} p1_interrupt_handler.o led.o switches.o buttonMain.o ../lib/libTimer.a
+siren.elf: ${COMMON_OBJECTS} main.o stateMachines.o led.o wdInterruptHandler.o buzzer.o ../lib/libTimer.a
 	${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^
 
-load: button.elf
-	msp430loader.sh button.elf
+load: siren.elf
+	msp430loader.sh siren.elf
 
 clean:
-	rm -f *.o *.elf *# ~*
+	rm -f *.o *.elf *# *~
 
+led.o: led.c led.h
+
+wdInterruptHandler.o: stateMachines.h
+
+stateMachines.o: led.h stateMachines.h
+
+buzzer.o: buzzer.h
