--- a/demos_copy/toy/Makefile
+++ b/demos_copy/toy/Makefile
@@ -11,7 +11,7 @@ AS              = msp430-elf-as
 all: main.elf 
 
 #additional rules for files
-main.elf: ${COMMON_OBJECTS} p1_interrupt_handler.o buzzer.o stateMachines.o wdInterruptHandler.c led.o switches.o main.o ../lib/libTimer.a
+main.elf: ${COMMON_OBJECTS} p1_interrupt_handler.o buzzer.o stateMachines.o wdInterruptHandler.c led.o switches.o main.o song.o ../lib/libTimer.a
 	${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^
 
 load: main.elf
