moved toy to project folder

--- a/project/Makefile
+++ b/project/Makefile
@@ -1,19 +1,5 @@
-all: libTimer.a
-CPU		= msp430g2553
-CFLAGS		= -mmcu=${CPU}
-
-#switch the compiler (for the internal make rules)
-CC		= msp430-elf-gcc
-AS		= msp430-elf-as
-AR		= msp430-elf-ar
-
-libTimer.a: clockTimer.o sr.o
-	$(AR) crs $@ $^
-	mv $^ ../h ../lib
-	cp *.h ../h
+all:
+	(cd toy && make load)
 
 clean:
-	rm -f timerLib.a *.o *~ *#
-
-install: libTimer.a
-	mkdir -p
+	(cd toy && make clean)
